--- a/style.css
+++ b/style.css
@@ -1,107 +1,128 @@
 body{
-  color: white;
   text-align: center;
-  background-color: rgb(0,0,0,0.3);
+  color: white;
 }
 header{
   position: fixed;
   top: 0;
   left: 0;
-  text-align: center;
-  box-shadow: 2px 2px 2px black;
+  background-color: rgb(19, 19, 86);
   width:100%;
-  background-color: rgb(34, 4, 110);
-  color: white;
+  box-shadow: 1px 1px 5px black;
   z-index: 10;
 }
+header p{
+  font-weight: bold;
+}
 .sticky-image{
-  position: sticky;
-  width: 100%;
-  left: 0px;
+  background-color: antiquewhite;
+  position: absolute;
+  top:70px;
+  left: 0;
+  width:100%;
+  z-index:-1
 }
 .sticky-image img{
-  position: fixed;
-  top: 80px;
+width:100%;
+position: fixed;
+left: 0;
+filter:brightness(55%);
+}
+.sticky-image > div{
+  position:fixed;
+  left:40%;
+}
+.sticky-image > div p{
+  font-weight: bolder;
+  font-size: 20px;
+}
+.main-container {
+  position: absolute;
+  top: 300px;
   left: 0;
   width: 100%;
- filter: brightness(55%);
-  z-index: -1;
+  text-align: center; 
 }
-.heading{
-  position: fixed;
-  left:40%;
-  top: 100px;
-  text-align: center;
-  
-}
-.coaches{
-  position: absolute;
-  top:250px;
-  left:15%;
 
-}
-.coach1, .coach2, .coach3{
-  border: 10px solid white;
-  border-radius: 10px;
-  margin: 0px 30px ;
-  position: relative;
+.coaches {
+  width: 250px;
+  height: 250px;
   display: inline-block;
-  width: 25%;
-  height:25vh;
-  background-color: white;
-  box-shadow: 2px 2px 2px black;
-
-}
-.coaches img{
-  width: 100%;
-  height:25vh;
-  object-fit: cover;
-}
-.coaches p{
-  padding-bottom: 0px;
-  margin-bottom: 0px;
-  color: white;
+  margin-right: 50px;
+  position: relative;
   text-align: center;
+  border-radius: 10px;
+}
+
+.coaches img {
+  width: 100%;
+  height: 100%; 
+  object-fit: cover; 
+  filter: brightness(70%);
+  border-radius: 10px;
+  box-shadow: 1px 2px 2px white; 
+}
+
+ .coaches .description {
   position: absolute;
   bottom: 0;
-  left:30%;
+  width: 100%; 
+  color: white;
+  font-weight: bold;
+}
+.coaches .description p {
+  margin: 0;
+  font-size: 16px;
 }
 .players{
-  border: 10px solid white;
-  border-radius: 10px;
-  background-color: white;
-  position: absolute;
-  top:550px;
-  left:24%;
-  width:52%;
-  box-shadow: 2px 2px 2px black;
+  position:absolute;
+  top:400px;
+  left:25%;
+  width:100%;
+ 
 }
 .players h2{
-color:rgb(34, 4, 110);
-font-weight: bold;
+  color:rgb(19, 19, 86);
+  text-align: center;
 }
-dl{
-  margin:0px;
-  padding: 0px;
+.player1{
+  width: 500px;
+  max-height: 350px;
   overflow-y: scroll;
-  width: 100%;
-  max-height: 50vh;
-}
-dt figure{
+  overflow-x: hidden;
+  scrollbar-width: thin;
+  margin-bottom: 20px;
+  background: white;
   border-radius: 10px;
-  width: 90%;
-  height: 40%;
-  object-fit: cover;
-
+  text-align: center;
+}
+figure{
+  max-height: 250px;
+}
+figcaption{
+  color:rgb(19, 19, 86);
+  font-size: 24px;
+  padding: 5px;
 }
 figure img{
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
+  border-radius: 50px;
+  box-shadow: 2px 2px 2px black;
 }
+.heading {
+  position: sticky;
+  top: 0;
+  background: white;
+  z-index: 10;
+ margin-top: 0;
+ padding: 10px;
+}
+
 .ranking{
   position: absolute;
-  top: 1100px;
+  top: 900px;
   left:15%;
   width: 70%;
   box-shadow: 2px 2px 2px black;
@@ -132,7 +153,7 @@ td, th{
 
 footer{
   position: absolute;
-  top: 1350px;
+  top: 1250px;
   left:0;
   background-color: rgb(34, 4, 110);
   width: 100%;
